--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="container">
-            <a href="index.html" class="logo"><img src="./logo/logo.jpg"></a>
+            <a href="index.html" class="logo"><img src="logo.png"></a>
 
             <ul>
                 <li><a href="index.html">Home</a></li>
